# claude-code

./: .gitignore  README.md  pyproject.toml
docs/pr-watch/: configuration.md  host-bridge.md  mcp.md  overview.md  setup.md  troubleshooting.md
docs/superpowers/specs/: 2026-05-11-pr-session-watcher-design.md
pr_watch/: __init__.py  classifier.py  cli.py  conductor_adapter.py  config.py  delivery.py  github.py  host_adapter.py  host_integration.py  mcp_server.py  models.py  notifications.py  service.py  sessions.py  setup.py  state.py  util.py  workflow.py
skills/ai-council/: SKILL.md
skills/codex-review-loop/: SKILL.md
skills/playbook/: README.md  SKILL.md
skills/playbook/scripts/: build-codex-prompt.sh  scan-skills.sh
skills/playbook/templates/: codex_runbook_prompt.md
skills/review-pr/: SKILL.md  skill.md
skills/review-pr-comments/: README.md  skill.md
skills/sync-skill/: SKILL.md
tests/: test_host_adapter.py  test_notify_prompt.py  test_pr_watch.py
tests/fixtures/: prs.json
